<resources>
    <string name="app_name">Dicoding Submisi Terakhir</string>
    <string name="tab_text_1">FILM</string>
    <string name="tab_text_2">ACARA TV</string>
    <string name="tab_text_3">FILM FAVORIT</string>
    <string name="tab_text_4">ACARA TV FAVORIT</string>
    <string-array name="data_judul">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avangers Infinity War</item>
        <item>Birdbox</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed</item>
        <item>Deadpool</item>
        <item>How To Train Your Dragon 3</item>
        <item>DragonBall Z Broly</item>
        <item>Glasss</item>
        <item>Hunter Killer</item>
        <item>YONDU</item>
        <item>Mortal Engine</item>
        <item>Preman Pensiun</item>
        <item>Robinhood</item>
        <item>Spiderman Into The Spiderverse</item>
        <item>The Girl</item>
        <item>The Mule</item>
        <item>Venom</item>

    </string-array>
    <string-array name="data_deskripsi">
        <item>Seorang musisi membantu seorang penyanyi muda menemukan usia dan alkoholisme dan karirnya menjadi spiral.</item>
        <item>Arthur Curry, pewaris kelahiran manusia dari kerajaan bawah laut Atlantis, melanjutkan upaya untuk mencegah perang antara dunia lautan dan daratan.</item>
        <item>The Avengers dan sekutu mereka harus rela mengorbankan semua dalam upaya untuk mengalahkan Thanos yang kuat sebelum kehancuran dan kehancurannya mengakhiri alam semesta.</item>
        <item>Lima tahun setelah kehadiran tak terlihat yang tak menyenangkan membuat sebagian besar masyarakat bunuh diri, seorang ibu dan dua anaknya melakukan upaya putus asa untuk mencapai keselamatan.</item>
        <item>The story of the legendary rock band Queen and lead singer Freddie Mercury, leading up to their famous performance at Live Aid (1985)</item>
        <item>Kisah band rock legendaris Queen dan vokalis Freddie Mercury, yang mengarah ke penampilan terkenal mereka di Live Aid (1985)</item>
        <item>Mantan Juara Dunia Kelas Berat Rocky Balboa melayani sebagai pelatih dan mentor bagi Adonis Johnson, putra almarhum teman dan mantan saingannya Apollo Creed.</item>
        <item>A wisecracking mercenary gets experimented on and becomes immortal but ugly, and sets out to track down the man who ruined his looks.</item>
        <item>Seorang tentara bayaran yang melakukan penyobaran bereksperimen dan menjadi abadi tetapi jelek, dan berangkat untuk melacak orang yang merusak penampilannya.</item>
        <item>Empat puluh satu tahun yang lalu, Planet Vegeta, planet asal Saiyan, diperintah oleh pasukan Raja Dingin, yang mendelegasikan perintah mereka kepada putranya Frieza. Raja Vegeta, pemimpin Saiyan, percaya putranya, Pangeran Vegeta, adalah anak ajaib yang ditakdirkan untuk membebaskan rakyat mereka dan memerintah alam semesta. Dia belajar dari Broly, bayi Saiyan yang lahir dengan tingkat kekuatan abnormal melebihi putranya, dan mengasingkan Broly ke planet Vampa yang jauh. Broly dan ayahnya Paragus, yang mengejar putranya, terdampar di Vampa setelah kapal mereka rusak. Paragus bersumpah untuk mengangkat Broly sebagai prajurit yang perkasa untuk membalas dendam pada Raja Vegeta.</item>

        <item>Satpam David Dunn menggunakan kemampuan supernaturalnya untuk melacak Kevin Wendell Crumb, seorang lelaki terganggu yang memiliki dua puluh empat kepribadian.</item>
        <item>Seorang kapten kapal selam Amerika yang belum diuji tim dengan Seal Angkatan Laut AS untuk menyelamatkan presiden Rusia, yang telah diculik oleh seorang jendral jahat.</item>
        <item>Pada pergantian abad London, seorang pengasuh magis menggunakan musik dan petualangan untuk membantu dua anak terlantar menjadi lebih dekat dengan ayah mereka.</item>
        <item>Dalam dunia pasca-apokaliptik di mana kota-kota mengendarai roda dan saling memakan untuk bertahan hidup, dua orang bertemu di London dan mencoba untuk menghentikan konspirasi.</item>
        <item>Setelah tiga tahun, bisnis kecimpring Muslihat (Epi Kusnandar) yang sudah pensiun sebagai preman, mengalami masalah. Penjualannya menurun. Muslihat juga menghadapi masalah baru saat Safira (Safira Maharani), anak perempuan satu-satunya, tumbuh remaja dan mulai didatangi lelaki. Masalah lebih besar: masalah di antara mantan anak buahnya.</item>
        <item>Seorang pejuang perang yang keras dan komandan Moornya melakukan pemberontakan yang berani melawan mahkota Inggris yang korup.</item>
        <item>Teen Miles Morales menjadi Spider-Man dari realitasnya, melintasi jalannya dengan lima rekan dari dimensi lain untuk menghentikan ancaman bagi semua realitas.</item>
        <item>Lara adalah seorang gadis berusia 15 tahun, lahir di tubuh seorang anak laki-laki, yang bermimpi menjadi seorang balerina.</item>
        <item>Seorang ahli hortikultura berusia 90 tahun dan veteran Perang Korea mengubah bagal narkoba untuk kartel Meksiko.</item>
        <item>Seorang reporter yang gagal terikat pada entitas asing, salah satu dari banyak simbiot yang telah menginvasi Bumi. Tetapi makhluk itu menyukai Bumi dan memutuskan untuk melindunginya.</item>

    </string-array>
    <string-array name="data_tanggalRilis">
        <item>19 Oktober 2018</item>
        <item>21 Desember 2018</item>
        <item>25 April 2018</item>
        <item>12 November 2018</item>
        <item>27 Oktober 2018</item>
        <item>19 Desember 2018 </item>
        <item>28 November 2018</item>
        <item>10 Februari 2016</item>
        <item>9 Januari 2019</item>
        <item>16 Februari 2019</item>
        <item>16 Januari 2019</item>
        <item>24 Oktober 2018</item>
        <item>22 Desember 2018</item>
        <item>13 Desember 2018</item>
        <item>17 Januari 2019</item>
        <item>20 November 2018</item>
        <item>12 Desember 2018</item>
        <item>12 Mei 2018</item>
        <item>23 Januari 2019</item>
        <item>3 Oktober 2018</item>
    </string-array>
    <string-array name="data_judul_film">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>God</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpson</item>
        <item>The Umbrella</item>
        <item>The Walking Dead</item>

    </string-array>
    <string-array name="data_deskripsi_film">
        <item>Playboy miliarder manja, Oliver Queen, hilang dan diduga tewas ketika kapal pesiarnya hilang di laut. Dia kembali lima tahun kemudian seorang pria yang berubah, bertekad untuk membersihkan kota sebagai main hakim sendiri bersenjatakan busur.</item>
        <item>Petualangan seorang ilmuwan gila idealis dan tim lapangannya dari orang-orang buangan yang sangat kuat.</item>
        <item>Dragon Ball menceritakan kisah seorang pejuang muda dengan nama Son Goku, seorang bocah lelaki dengan ekor yang memulai upaya untuk menjadi lebih kuat dan belajar dari Bola Naga, ketika, setelah ketujuh orang itu berkumpul, berikan harapan apa pun kepada pilihan.</item>
        <item>Lucy, calon Penyihir Surgawi, menjadi teman dan sekutu penyihir kuat Natsu, Gray, dan Erza, yang merupakan bagian dari guild penyihir terkenal, Fairy Tail.</item>
        <item>Di kota Rhode Island yang aneh, sebuah keluarga yang tidak berfungsi berusaha keras untuk menghadapi kehidupan sehari-hari ketika mereka terlempar dari satu skenario gila ke skenario lainnya.</item>
        <item>Setelah disambar petir, Barry Allen bangun dari komanya untuk menemukan bahwa dia diberi kekuatan kecepatan super, menjadi Flash, melawan kejahatan di Central City</item>
        <item>Sembilan keluarga bangsawan berjuang untuk menguasai tanah mitos Westeros, sementara musuh kuno kembali setelah tidak aktif selama ribuan tahun.</item>
        <item>Kisah di balik kebangkitan Detektif James Gordon menjadi terkenal di Gotham City pada tahun-tahun sebelum kedatangan Batman.</item>
        <item>Drama yang berpusat pada kehidupan pribadi dan profesional dari lima magang bedah dan penyelia mereka. </item>
        <item>Di bagian yang sama, film thriller konsep tinggi dan drama usia dewasa, HANNA mengikuti perjalanan seorang gadis muda luar biasa yang dibesarkan di hutan, ketika ia menghindari pengejaran tanpa henti dari agen CIA yang tidak ada buku dan mencoba untuk menggali kebenaran di balik siapa yang dia adalah.</item>
        <item>Seorang pria muda dianugerahi keterampilan seni bela diri yang luar biasa dan kekuatan mistis yang dikenal sebagai Iron Fist.</item>
        <item>Naruto Uzumaki, adalah seorang ninja yang keras, hiperaktif, remaja yang terus-menerus mencari persetujuan dan pengakuan, serta menjadi Hokage, yang diakui sebagai pemimpin dan terkuat dari semua ninja di desa.</item>
        <item>Kasus-kasus dari Tim Investigasi Kasus Kriminal Angkatan Laut Washington, D.C. Tim Respons Kasus Utama, dipimpin oleh Agen Khusus Leroy Jethro Gibbs.</item>
        <item>Sambil menavigasi perairan romantis, sekolah dan keluarga yang bermasalah, Archie dan gengnya terjerat dalam misteri Riverdale yang gelap.</item>
        <item>Keluarga Chicago yang suka berkelahi, sangat loyal tidak membuat permintaan maaf.</item>
        <item>Petualangan sepupu Superman dalam karier pahlawan supernya sendiri.</item>
        <item>Dua saudara mengikuti jejak ayah mereka sebagai pemburu, melawan makhluk gaib jahat dalam banyak jenis, termasuk monster, setan, dan dewa yang berkeliaran di bumi.</item>
        <item>Petualangan menyindir dari keluarga kelas pekerja di kota Springfield yang tidak sesuai.</item>
        <item>Sekelompok pahlawan super yang bubar bersatu kembali setelah ayah angkat mereka, yang melatih mereka untuk menyelamatkan dunia, meninggal.</item>
        <item>Wakil Sheriff Rick Grimes bangun dari koma untuk mengetahui bahwa dunia ini hancur, dan harus memimpin sekelompok orang yang selamat untuk tetap hidup.</item>

    </string-array>
    <string-array name="data_tanggalRilis_film">
        <item>19 Oktober 2018</item>
        <item>21 Desember 2018</item>
        <item>25 April 2018</item>
        <item>12 November 2018</item>
        <item>27 Oktober 2018</item>
        <item>19 Desember 2018 </item>
        <item>28 November 2018</item>
        <item>10 Februari 2016</item>
        <item>9 Januari 2019</item>
        <item>16 Februari 2019</item>
        <item>16 Januari 2019</item>
        <item>24 Oktober 2018</item>
        <item>22 Desember 2018</item>
        <item>13 Desember 2018</item>
        <item>17 Januari 2019</item>
        <item>20 November 2018</item>
        <item>12 Desember 2018</item>
        <item>12 Mei 2018</item>
        <item>23 Januari 2019</item>
        <item>3 Oktober 2018</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_film">Judul Film : </string>
    <string name="Tanggal_Rilis">Tanggal Rilis : </string>
    <string name="tanggal_rilis">Tanggal Rilis : </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="reviewer_aditya_negara">Reviewer : Aditya Negara</string>
    <string name="masukan_favorit">Masukan Favorit</string>
    <string name="hapus_favorit">hapus favorit</string>
</resources>